# better_teach

./: .gitignore  CMakeLists.txt  README.md  package.xml
example/: IcpConfig.yaml  ToleranceEllipseConfig.yaml  config.yaml  usage.sh
include/: anchor_point.h  attraction_bassin_builder.h  command.h  convergence_distance_function.h  convergence_distance_function.hpp  ellipse.h  ellipse.hpp  pose.h  teach_repeat_map.h  tolerance_ellipse_calculator.h  transform.h
plot/: attractionBassin.csv  attractionBassinForet-10vers11.csv  attractionBassinForet-10vers13.csv  attractionBassinForet-10vers15.csv  attractionMap.py  barplot.py  correctedSetOfAnchorPoints.csv  datasets.py  datasets_data.csv  datasets_readme.md  effectofepsilon.py  effectofparams.py  mean_and_var.csv  optimizedSetOfAnchorPoints.csv  requirements.txt  setOfAnchorPoints.csv  teachrepeatmap.py
report/: .gitignore
report/devoir/: devoir.aux  devoir.tex
report/paper/: references.bib  root.tex  unittests.html  unittests.md
report/paper/img/: optimized-graph.tex  unoptimized-graph.tex
src/: anchor_point.cpp  attraction_bassin_builder.cpp  attraction_bassin_main.cpp  command.cpp  convergence_distance_function.cpp  convergence_distance_function.h  convergence_distance_function.hpp  ellipse.cpp  ellipse.h  ellipse.hpp  ellipsoid.h  grid_maps.cpp  grid_maps.h  grid_maps_main.cpp  localised_point_cloud.cpp  localised_point_cloud.h  localizability_graph.cpp  localizability_graph.h  point.hpp  pointmatcherservice.cpp  pointmatcherservice.h  pointmatcherservice.hpp  pointmatchervariance.cpp  pose.cpp  pose.h  teach_repeat_map.cpp  teach_repeat_map.h  teachrepeat_map_optimizer.cpp  teachrepeat_map_optimizer.h  test_abc.py  test_epsilon.py  tolerance_ellipse_calculator.cpp  tolerance_ellipse_calculator.h  tolerance_ellipse_calculator.hpp  tolerance_ellipse_main.cpp  tr_map_optimization_main.cpp  tr_map_optimization_main.cpp.orig  transform.cpp  transform.h
tests/: ellipsoidTest.cpp  localizabilityGraphTest.cpp  pointMatcherServiceTests.cpp  transofmTest.cpp  unitTests.cpp
tests/res/: theSamePointCloud.vtk
